fix vertical align in rightNavbar on tablet

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -538,6 +538,14 @@
 		display: inline-block;
 		color: @navbarItemColor;
 	}
+
+	.tab-left {
+		margin: @tabletRightNavbarTabLeftMargin;
+	}
+
+	.tab-right {
+		margin: @tabletRightNavbarTabRightMargin;
+	}
 }
 
 .ActiveSnippet { .Snippet;
